# QCStrat

./: .env.example  CompositeAplha.py  Makefile  README.md  __init__.py  main.py  main_basic.py  pyproject.toml  requirements.txt  research.ipynb
indicators/: __init__.py  candlestick_patterns.py  indicator_strength.py  technical_indicators.py
models/: __init__.py  portfolio_construction.py  technical_alpha.py
models/aplha_models/: technical_alpha.py
models/portfolio_construction/: PortfolioConstructionModel.py
models/universe_selection/: universe_selection.py
